<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/model_choices"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_model_english_tiny"
            android:checkable="true"
            android:title="@string/model_english_tiny" />
        <item
            android:id="@+id/menu_model_english_base"
            android:checkable="true"
            android:title="@string/model_english_base" />
        <item
            android:id="@+id/menu_model_english_small"
            android:checkable="true"
            android:title="@string/model_english_small" />
        <item
            android:id="@+id/menu_model_multilingual_tiny"
            android:checkable="true"
            android:title="@string/model_multilingual_tiny" />
        <item
            android:id="@+id/menu_model_multilingual_base"
            android:checkable="true"
            android:title="@string/model_multilingual_base" />
        <item
            android:id="@+id/menu_model_multilingual_small"
            android:checkable="true"
            android:title="@string/model_multilingual_small" />
    </group>
</menu>
